blogs/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: amarjeetkaur111/moderation
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4003

---

      apiVersion: v1
      kind: Service
      metadata:
        name: moderation-clusterip-serv
      spec:
        selector:
          app: moderation
        ports:
        - port: 4003
          targetPort: 4003
