blogs/infra/k8s/posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blog-posts
spec:
  containers:
    - name: posts
      image: posts
