blogs/infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: amarjeetkaur111/comments
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4001

---

apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-serv
spec:
  selector:
    app: comments
  ports:
  - port: 4001
    targetPort: 4001

---

apiVersion: v1
kind: Service
metadata:
  name: comments-serv
spec:
  type: NodePort
  selector:
    app: comments
  ports:
  - port: 4001
    targetPort: 4001
