blogs/infra/k8s/posts_srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-serv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
  - name: posts
    port: 4000 
    targetPort: 4000
