blogs/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: amarjeetkaur111/query
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-serv
spec:
  selector:
    app: query
  ports:
  - port: 4002
    targetPort: 4002
