blogs/infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: ingress
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - pathType: Prefix
        path: /posts/create
        backend:
          service:
            name: posts-clusterip-serv
            port: 
              number: 4000
      - pathType: Prefix
        path: /posts
        backend:
          service:
            name: query-clusterip-serv
            port: 
              number: 4002
      - pathType: Prefix
        path: /posts/?(.*)/comments
        backend:
          service:
            name: comment-clusterip-serv
            port:
              number: 4001
      - pathType: Prefix
        path: /posts/?(.*)/comments
        backend:
          service:
            name: comment-clusterip-serv
            port:
              number: 4001
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: client-clusterip-serv
            port:
              number: 3000
